2014-03-19  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add source file "plotstatustimeline.tcl" - supplied by Sean Woods
	* plotstatustimeline.tcl: New source file implementing the new status timeline plot type - supplied by Sean Woods
	* plotdemos18.tcl: New example illustrating the new status timeline plot type - supplied by Sean Woods
	* plotchart.man: Description of the new plot type
	* pkgIndex.tcl: Bumped the version to 2.3.0 because of the new plot type

2014-03-14  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Forgot to bump the version to 2.2.2 in the "provide" statement (ticket 530c40d269eb3bc4523115e121c38e7a6c047632)

2014-02-06  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotconfig.tcl: Add dummy axis components for Gantt charts
	* examples/demo.tcl: Corrected call to plot subcommand for boxplots (series argument was missing)
	* pkgIndex.tcl: Bumped the version to 2.2.2

2013-09-29  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add dummy scaling parameters for spiral pies
	* plotpriv.tcl: Use [string first] instead of fixed size in WidthCanvas and HeightCanvas (see ticket 40ae42af80c61618720510ba6648bef183e6b894)
	* plotconfig.tcl: Add dummy axis components for table charts
	* examples: Add sh-bang, remove source statements (always package require instead), catch console show
	* pkgIndex.tcl: Bumped the version to 2.2.1

2013-06-20  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.man: Restored "epilogue" of the man page

2013-06-15  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Implemented a ternary diagram
	* plotpriv.tcl:  Implemented methods for a ternary diagram
	* plotaxis.tcl:  Implemented methods for a ternary diagram
	* plotconfig.tcl: Implemented methods for a ternary diagram
	* plotchart.man: Documented the ternary diagram and its methods
	* pkgIndex.tcl:  Bumped the version to 2.2.0
